🔧 chore(index.css): remove unnecessary styles from body element to improve code readability and maintainability 🔧 chore(index.css): refactor control section styles to improve code readability and maintainability 🔧 chore(index.html): restructure HTML markup to improve semantics and readability 🔧 chore(background.js): fix import statement to match the correct file name ✨ feat(dom-manager.js): add DomManager class to manage DOM elements for easy access and manipulation ✨ feat(event-handler.js): update event listeners to use DomManager for better code organization and readability ✨ feat(game.js): update import statement to match the correct file name ✨ feat(index.js): update import statement to match the correct file name ✨ feat(mario.js): update import statement to match the correct file name ✨ feat(obstacle.js): update import statement to match the correct file name

--- a/index.css
+++ b/index.css
@@ -1,8 +1,3 @@
-body {
-  margin: 0;
-  padding: 2rem;
-}
-
 .game {
   width: 100%;
   min-height: 440px;
@@ -38,9 +33,10 @@ body {
 }
 
 .control {
+  background-color: #6990f6;
   display: flex;
   align-items: center;
-  padding: 0px 20px;
+  padding: 0 1rem;
 }
 
 .score-heading {
